# c-Data-Structures-and-Algorithms

./: .gitignore  CMakeLists.txt
DataStructure01/: 1.vector.c  CMakeLists.txt  euler-1.c  euler-2.c  euler-4.c  euler-8.c  list.c  queue.c  stack.c  stack_list.c  time.c  vector.c
IinearIist/: 1.c  CMakeLists.txt
ModelTest/: CMakeLists.txt  test1-1.c  test1-2.c  test2-1.c  test2-2.c  test3-1.c  test3-2.c  test4-1.c  test4-2.c  test5-1.c  test5-2.c  test6-1.c  test6-2.c
base/: 1.test.c  1.test.cpp  2.test.c  3.test.c  4.test.c  5.test.c  6.test.c  7.test.c  CMakeLists.txt
exercise/: 2.test.c  CMakeLists.txt  circulation.c  exercise-array.c  exercise-case-structure.c  exercise-function-file1.c  exercise-function-file2.c  exercise-function-file3.c  exercise-function.c  exercise-funtion.c  exercise-pointer.c  exercise1.c  leap.c
list/: 1.linklist.cpp  2.linklist.cpp  3.linklist.cpp  CMakeLists.txt
