cmake_minimum_required(VERSION 3.19)
project(DataStructure01)

set(CMAKE_C_STANDARD 99)

add_executable(ds-1.vector 1.vector.c)
add_executable(ds-euler-1.c euler-1.c)
add_executable(ds-time.c time.c)
add_executable(ds-euler-2.c euler-2.c)
add_executable(ds-euler-4.c euler-4.c)
add_executable(ds-euler-8.c euler-8.c)
add_executable(ds.vector vector.c)