cmake_minimum_required(VERSION 3.19)
project(ModelTest)

set(CMAKE_C_STANDARD 99)

add_executable(modelTest-test1-1.c test1-1.c)
add_executable(modelTest-test1-2.c test1-2.c)

add_executable(modelTest-test2-1.c test2-1.c)
add_executable(modelTest-test2-2.c test2-2.c)

add_executable(modelTest-test3-1.c test3-1.c)
add_executable(modelTest-test3-2.c test3-2.c)

add_executable(modelTest-test4-1.c test4-1.c)
add_executable(modelTest-test4-2.c test4-2.c)

add_executable(modelTest-test5-1.c test5-1.c)
add_executable(modelTest-test5-2.c test5-2.c)

add_executable(modelTest-test6-1.c test6-1.c)
add_executable(modelTest-test6-2.c test6-2.c)