cmake_minimum_required(VERSION 3.19)
project(base)

set(CMAKE_C_STANDARD 99)

add_executable(base-1.test.c 1.test.c)
add_executable(base-1.test.cpp 1.test.cpp)
add_executable(2.test.c 2.test.c)
add_executable(base-3.test.c 3.test.c)
add_executable(base-4.test.c 4.test.c)
add_executable(base-5.test.c 5.test.c)
add_executable(base-6.test.c 6.test.c)
add_executable(base-7.test.c 7.test.c)
