cmake_minimum_required(VERSION 3.19)
project(exercise)

set(CMAKE_C_STANDARD 99)

add_executable(exercise1.cpp exercise1.c)
add_executable(exercise2.c 2.test.c)
add_executable(exercise-case-structure.c exercise-case-structure.c)
add_executable(exercise-leap.c leap.c)
add_executable(exercise-circulation.c circulation.c)
add_executable(exercise-array.c exercise-array.c)
add_executable(exercise-function.c exercise-function.c exercise-function-file1.c exercise-function-file2.c exercise-function-file3.c)
add_executable(exercise-function-file1.c exercise-function-file1.c)
add_executable(exercise-function-file2.c exercise-function-file2.c)
add_executable(exercise-function-file3.c exercise-function-file3.c)
